# mygeopy

./: README.md  pyproject.toml  triangle.py
.github/workflows/: python-app.yml
tests/: test_triangle.py
