[project]
name = "mygeopy"
version = "0.0.1"
description = "My Python package for working with geometry."
authors = [{ name = "Rujuta Purohit", email = "rujuta200201@gmail.com" }]

[build-system]
requires = ["setuptools", "setuptools-scm>=8.1"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
tests = ["pytest"]

[tools.pytest.ini.options]
addopts = "--doctest-modules"
